syntax = "proto3";

option java_package = "com.sunya.electionguard.protogen";
option java_outer_classname = "PlaintextBallotProto";

// A decrypted ballot.
message PlaintextBallot {
  string object_id = 1; // a unique Ballot ID created by the external system
  string style_id = 2; // matches the BallotStyle.object_id
  repeated PlaintextBallotContest contests = 3;
}

message PlaintextBallotContest {
  string contest_id = 1; // matches the ContestDescription.object_id
  int32 sequence_order = 2;
  repeated PlaintextBallotSelection ballot_selections = 3;
}

message PlaintextBallotSelection {
  string selection_id = 1; // matches the SelectionDescription.object_id
  int32 sequence_order = 2;
  uint32 vote = 3;
  bool is_placeholder_selection = 4;
  ExtendedData extended_data = 5; // not used
}

// used for write-in candidate value
message ExtendedData {
  string value = 1;
  uint32 length = 2; // TODO why length ?
}
